# diff-reactive-bot

./: .gitignore  .gitmodules  README.md  generate_stats.py
docs/latex/: conference_101719.tex
docs/latex/Bib/: references.bib
src/: generate_stats.py  package.xml  setup.cfg  setup.py
src/launch/: wall_following_diff_robot.launch.py
src/rviz/: robot_navigation.rviz
src/wall_following_diff_robot/: __init__.py  __init__old.py
src/world/: map.yaml  serp.model.yaml  world.yaml
